--- a/index.html
+++ b/index.html
@@ -3,7 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <title>Learn site</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container text-center my-5">
+      <div class="row">
+        <div class="col-lg-6 col-md-8 mx-auto">
+          <img src="/image/kittens.jpg" alt="Милые котятки" width="400px" />
+          <h1 class="fw-light">Богатенко Евгений</h1>
+          <p class="lead text-muted">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum
+            sit quo eveniet, eum, assumenda dolor alias aliquam ipsa cupiditate
+            repellendus necessitatibus ullam earum commodi quaerat ex. Quos,
+            praesentium distinctio.
+          </p>
+          <a href="https://yandex.ru/" target="_blank" class="btn btn-primary">
+            Яндекс
+          </a>
+          <a
+            href="https://yandex.ru/"
+            target="_blank"
+            class="btn btn-secondary"
+          >
+            Яндекс
+          </a>
+        </div>
+      </div>
+    </div>
+  </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
 </html>
