--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <style>
+      .rounded-img {
+        width: 60%;
+      }
+    </style>
     <title>Learn site</title>
   </head>
   <body>
