--- a/index.html
+++ b/index.html
@@ -12,15 +12,52 @@
     <style>
       .rounded-img {
         width: 60%;
+        border-radius: 50%;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+        padding: 0.6em;
+        margin-top: 1em;
       }
     </style>
     <title>Learn site</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
+        <a class="navbar-brand p-0" href="/">
+          <img src="/image/Sunauway.svg" alt="Logo" width="150" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="places.html">Favorite places</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="container text-center my-5">
       <div class="row">
         <div class="col-lg-6 col-md-8 mx-auto">
-          <img src="/image/kittens.jpg" alt="Милые котятки" width="400px" />
+          <img
+            class="rounded-img"
+            src="/image/kittens.jpg"
+            alt="Милые котятки"
+            width="400px"
+          />
           <h1 class="fw-light">Богатенко Евгений</h1>
           <p class="lead text-muted">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui harum
