--- a/places.html
+++ b/places.html
@@ -9,7 +9,25 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <style></style>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <style>
+      .card {
+        border-radius: 1em;
+        text-align: center;
+        padding: 1em;
+      }
+      .card:hover {
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+      .card img {
+        border-radius: 50%;
+        width: 80%;
+        margin: auto;
+      }
+    </style>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -47,49 +65,72 @@
       </div>
     </nav>
     <div class="container my-5">
-      <div class="card" style="width: 18rem">
-        <img
-          src="/image/tree_on_sunset_background.jpg"
-          class="card-img-top"
-          alt="Дерево на берегу моря на фоне заката"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-5">
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://picsum.photos/id/1018/300"
+              class="card-img-top"
+              alt="Дерево на берегу моря на фоне заката"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a
+                href="https://picsum.photos/id/1018/1500"
+                target="_blank"
+                class="btn btn-primary"
+                >Large Photo</a
+              >
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/image/tree_on_sunset_background.jpg"
-          class="card-img-top"
-          alt="Дерево на берегу моря на фоне заката"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://picsum.photos/id/1006/300"
+              class="card-img-top"
+              alt="Дерево на берегу моря на фоне заката"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a
+                href="https://picsum.photos/id/1006/1500"
+                target="-blank"
+                class="btn btn-primary"
+                >Large Photo</a
+              >
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem">
-        <img
-          src="/image/tree_on_sunset_background.jpg"
-          class="card-img-top"
-          alt="Дерево на берегу моря на фоне заката"
-        />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="col">
+          <div class="card">
+            <img
+              src="https://picsum.photos/id/1021/300"
+              class="card-img-top"
+              alt="Дерево на берегу моря на фоне заката"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">
+                Some quick example text to build on the card title and make up
+                the bulk of the card's content.
+              </p>
+              <a
+                href="https://picsum.photos/id/1021/1500"
+                target="_blank"
+                class="btn btn-primary"
+                >Large Photo</a
+              >
+            </div>
+          </div>
         </div>
       </div>
     </div>
